fixed icon spacing + added more hover effects

--- a/To-do-app/src/app/components/navi/navi.component.css
+++ b/To-do-app/src/app/components/navi/navi.component.css
@@ -26,6 +26,11 @@
     margin-left: 4px;
 }
 
+.darklogo, .lightlogo {
+    display: flex;
+    align-items: center;
+}
+
 .darkicon {
     stroke: #757575;
 }
