--- a/To-do-app/src/app/components/todoitem/todoitem.component.css
+++ b/To-do-app/src/app/components/todoitem/todoitem.component.css
@@ -38,10 +38,22 @@
 }
 
 .svg-check {
-    margin: auto;
-    background: red;
+    width: 50px;
+    height: 50px;
+    background: none;
     border: none;
     border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.svg-check:hover {
+    background: #7512F4;
+}
+
+.svg-check:hover .svg-check-line {
+    stroke: white
 }
 
 .hidden {
